# gad-paper

./: .gitignore  BACKBURNER.md  BENCHMARK_REPORT_2026-05-16.tex  CLAUDE.md  DATA_REFERENCE.md  EXPERIMENTS.tex  EXPERIMENT_LOG.md  EXPERIMENT_PLAN_ROUND2.md  FEATURE_TRACKER.md  FINDING_CART_VS_MW_STEP_2026_06_10.md  FINDING_GAD_PLATEAU_INTRINSIC_2026_05_16.md  FINDING_HYBRID_REACTANT_2026_05_16.md  FINDING_IRC_5TIER_2026_06_23.md  HANDOFF_IRC.md  HYBRID_FINDINGS_CATALOG.md  HYBRID_GAD_NEWTON_2026-05-04.tex  HYBRID_GAD_NEWTON_2026-05-09.tex  HYBRID_REPORT_2026-05-11.tex  HYBRID_TAKEAWAYS_2026-05-11.txt  IRC_COMPREHENSIVE_2026-04-17.tex  IRC_COMPREHENSIVE_2026-04-20.tex  IRC_COMPREHENSIVE_2026-04-28-reduced.tex  IRC_COMPREHENSIVE_2026-04-28.tex  IRC_COMPREHENSIVE_2026-04-28v2.tex  IRC_OVERVIEW.md  IRC_RESULTS_2026-04-15.tex  IRC_RESULTS_2026-04-16.tex  IRC_TEST_2026-04-29.tex  LIVE_STATUS.md  PAPER_INSIGHTS.md  PAPER_PACKAGE_2026_06_22.md  PAPER_READINESS_2026_05_16.md  README.md  REPORTS_INVENTORY_2026_06_22.md  RESULTS_2026-04-03.md  SCINE_XTB_FINDINGS_2026_05_11.md  SCINE_XTB_FINDINGS_2026_05_12.md  SCINE_XTB_FINDINGS_2026_05_15.md  STATUS_2026_04_20.md  STATUS_2026_05_16_COMPREHENSIVE.md  (+4 more)
agent_context/: MEMORY.md  elegant-coalescing-curry.md
analysis_2026_04_29/: DATA_INDEX.md  FINDINGS.md  HEADLINE.md  HYBRID_DEEPER_STATUS.md  compute_summary.csv  cross_calc_topo_compare.csv  dynamics_crossings.csv  dynamics_walltime.csv  failure_modes_across_noise.csv  gad_step_class_summary.csv  gad_step_safety.csv  gad_test_rmsd.csv  gad_truncation.csv  hybrid_failure_modes.csv  (+40 more)
(+276 files in other folders)
