[project]
name = "gadplus"
version = "0.1.0"
description = "GAD-based transition state search with HIP neural network potential"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "torch-geometric>=2.4",
    "numpy>=1.24",
    "scipy>=1.11",
    "pyarrow>=14.0",
    "ase>=3.22",
    "sella>=2.3",
    "hydra-core>=1.3",
    "hydra-submitit-launcher>=1.2",
    "mlflow>=2.9",
    "duckdb>=0.9",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]
analysis = ["matplotlib>=3.7", "plotly>=5.18", "pandas>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gadplus"]

[project.scripts]
gadplus = "gadplus.orchestration.run:main"

[tool.ruff]
line-length = 100
target-version = "py311"
